--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:server": "webpack --config ./build/webpack.config.server.js",
+    "build:server": "webpack --config ./build/webpack.config.server.prod.js",
     "build:client": "webpack --config ./build/webpack.config.client.prod.js --display-chunks --json > ./dist/stats.webpack.json",
     "start:dev": "node ./build/cli-tools.js --clear serve && webpack-dev-server --env.NODE_ENV=develop --config ./build/webpack.config.client.dev.js",
     "start:prod": "node ./build/cli-tools.js --clear dist --create dist && npm run build:client && npm run build:server && node ./dist/server.js",
@@ -17,29 +17,26 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-dual-import": "^1.2.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-universal-import": "^1.4.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "commander": "^2.12.2",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "extract-css-chunks-webpack-plugin": "^2.0.18",
     "html-webpack-plugin": "^2.30.1",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.9",
+    "postcss-loader": "^2.0.10",
     "raw-loader": "^0.5.1",
+    "react-hot-loader": "^3.1.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-assets-manifest": "^1.0.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-dev-server": "^2.10.1",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
@@ -56,7 +53,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-universal-component": "^2.8.0",
+    "react-universal-component": "^2.8.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
