--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run start:dev",
     "build:server": "webpack --config ./build/webpack.config.server.prod.js",
     "build:client": "webpack --config ./build/webpack.config.client.prod.js --display-chunks --json > ./dist/stats.webpack.json",
-    "start:dev": "node ./build/cli-tools.js --clear serve && webpack-dev-server --env.NODE_ENV=develop --config ./build/webpack.config.client.dev.js",
+    "start:dev": "node ./build/cli-tools.js --clear serve && webpack-dev-server --config ./build/webpack.config.client.dev.js",
     "start:prod": "node ./build/cli-tools.js --clear dist --create dist && npm run build:client && npm run build:server && node ./dist/server.js",
     "build:prod": "node ./build/cli-tools.js --clear dist --create dist && npm run build:client && npm run build:server"
   },
@@ -24,12 +25,12 @@
     "commander": "^2.12.2",
     "css-loader": "^0.28.8",
     "extract-css-chunks-webpack-plugin": "^2.0.18",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.10",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^3.1.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
@@ -41,14 +42,15 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^5.0.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0-beta.13",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
