--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-starter",
   "version": "0.1.0",
-  "description": "",
+  "description": "Seed project for flexible light React/Bootstrap 4 dashboards.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,49 +16,50 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-universal-import": "^1.4.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-universal-import": "^3.0.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "commander": "^2.12.2",
-    "css-loader": "^0.28.8",
-    "extract-css-chunks-webpack-plugin": "^2.0.18",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
+    "commander": "^2.16.0",
+    "css-loader": "^1.0.0",
+    "extract-css-chunks-webpack-plugin": "^3.0.6",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.10",
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0",
-    "webpack-assets-manifest": "^1.0.0",
-    "webpack-dev-server": "^2.10.1",
-    "webpack-node-externals": "^1.6.0"
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.0",
+    "webpack-assets-manifest": "^3.0.1",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
-    "fs-extra": "^5.0.0",
+    "fs-extra": "^6.0.1",
     "history": "^4.7.2",
-    "lodash": "^4.17.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0-beta.13",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.3",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-universal-component": "^2.8.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "webpack-flush-chunks": "^1.2.3"
+    "webpack-cli": "^3.0.8",
+    "webpack-flush-chunks": "^2.0.1"
   }
 }
