--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-universal-import": "^3.0.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "commander": "^2.16.0",
     "css-loader": "^1.0.0",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-import-resolver-alias": "^1.1.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "extract-css-chunks-webpack-plugin": "^3.0.6",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
@@ -41,7 +48,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "fs-extra": "^6.0.1",
