--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
