--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
+    "react-responsive": "^5.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
