--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "fs-extra": "^6.0.1",
     "history": "^4.7.2",
