--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "^6.0.1",
     "history": "^4.7.2",
+    "holderjs": "^2.9.4",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
