--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.10.0",
     "extract-css-chunks-webpack-plugin": "^3.0.6",
     "file-loader": "^1.1.11",
+    "hard-source-webpack-plugin": "^0.12.0",
     "html-webpack-plugin": "^3.2.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.2",
