--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.23.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.18.0",
     "webpack-assets-manifest": "^3.0.1",
     "webpack-dev-server": "^3.1.8",
