--- a/package.json
+++ b/package.json
@@ -60,9 +60,14 @@
     "fs-extra": "^7.0.0",
     "holderjs": "^2.9.4",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.5.0",
+    "react-bootstrap-table-next": "^1.3.0",
+    "react-bootstrap-table2-filter": "^1.0.1",
+    "react-bootstrap-table2-paginator": "^1.0.3",
+    "react-bootstrap-table2-toolkit": "^1.1.1",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
