--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "query-string": "^6.1.0",
     "react": "^16.5.0",
     "react-bootstrap-table-next": "^1.3.0",
+    "react-bootstrap-table2-editor": "^1.2.0",
     "react-bootstrap-table2-filter": "^1.0.1",
     "react-bootstrap-table2-paginator": "^1.0.3",
     "react-bootstrap-table2-toolkit": "^1.1.1",
