--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
+    "rc-slider": "^8.6.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
