--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
     "fs-extra": "^7.0.0",
     "holderjs": "^2.9.4",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "numeral": "^2.0.6",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-dropzone": "^6.2.4",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
     "react-responsive": "^5.0.0",
