Added Image cropping examples

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
+    "react-image-crop": "^6.0.0",
     "react-responsive": "^5.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
