--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-responsive": "^5.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-toggle": "^4.0.2",
     "react-universal-component": "^3.0.3",
     "reactstrap": "^6.3.0",
     "recharts": "^1.2.0",
