--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "fs-extra": "^7.0.0",
     "holderjs": "^2.9.4",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.5.0",
+    "react-big-calendar": "^0.20.1",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
