WIP: Added example in Projects Dashboard

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.5.0",
+    "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
