Added some ops and configurations

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@owczar/dashboard-style--main": "^0.1.8",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.1.1",
-    "express": "^4.16.3",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "fs-extra": "^7.0.0",
