Added sekletal loader to sidebar

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.6.0",
+    "react-content-loader": "^3.2.0",
     "react-dom": "^16.6.0",
     "react-responsive": "^6.0.1",
     "reactstrap": "^6.3.0",
