--- a/package.json
+++ b/package.json
@@ -11,75 +11,75 @@
   "author": "Webkom",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-2": "^7.0.0",
-    "autoprefixer": "^9.3.1",
+    "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.1.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-import-resolver-alias": "^1.1.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.10.0",
-    "file-loader": "^2.0.0"
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1"
   },
   "dependencies": {
     "@owczar/dashboard-style--main": "^0.2.15",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "bootstrap": "^4.1.1",
-    "compression": "^1.7.3",
-    "cross-fetch": "^2.2.2",
+    "bootstrap": "^4.3.1",
+    "compression": "^1.7.4",
+    "cross-fetch": "^3.0.2",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
-    "fs-extra": "^7.0.0",
-    "holderjs": "^2.9.4",
+    "fs-extra": "^7.0.1",
+    "holderjs": "^2.9.6",
     "lodash": "^4.17.11",
     "mobile-detect": "^1.4.3",
-    "moment": "^2.22.2",
-    "next": "^7.0.2",
-    "next-fonts": "^0.10.0",
-    "next-images": "^1.0.1",
+    "moment": "^2.24.0",
+    "next": "^8.0.4",
+    "next-fonts": "^0.17.0",
+    "next-images": "^1.1.1",
     "node-fetch": "^2.3.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
-    "prop-types": "^15.6.2",
-    "query-string": "^6.1.0",
-    "rc-slider": "^8.6.3",
-    "react": "^16.6.0",
-    "react-beautiful-dnd": "^9.0.2",
-    "react-big-calendar": "^0.20.1",
-    "react-bootstrap-table-next": "^1.3.0",
-    "react-bootstrap-table2-editor": "^1.2.0",
-    "react-bootstrap-table2-filter": "^1.0.1",
-    "react-bootstrap-table2-paginator": "^1.0.3",
-    "react-bootstrap-table2-toolkit": "^1.1.1",
-    "react-bootstrap-typeahead": "^3.2.4",
-    "react-content-loader": "^3.2.0",
-    "react-datepicker": "^1.7.0",
-    "react-dom": "^16.6.0",
-    "react-dropzone": "^6.2.4",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.4.2",
+    "rc-slider": "^8.6.9",
+    "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.0-beta.3",
+    "react-big-calendar": "^0.20.4",
+    "react-bootstrap-table-next": "^3.1.0",
+    "react-bootstrap-table2-editor": "^1.2.3",
+    "react-bootstrap-table2-filter": "^1.1.8",
+    "react-bootstrap-table2-paginator": "^2.0.5",
+    "react-bootstrap-table2-toolkit": "^1.4.0",
+    "react-bootstrap-typeahead": "^4.0.0-alpha.9",
+    "react-content-loader": "^4.2.1",
+    "react-datepicker": "^2.3.0",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.3",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.3",
-    "react-image-crop": "^6.0.0",
-    "react-quill": "^1.3.1",
-    "react-responsive": "^6.0.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-select": "^2.1.0",
+    "react-hot-loader": "^4.8.3",
+    "react-image-crop": "^6.0.18",
+    "react-quill": "^1.3.3",
+    "react-responsive": "^6.1.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-select": "^2.4.2",
     "react-text-mask": "^5.4.3",
-    "react-toastify": "^4.4.0",
+    "react-toastify": "^5.0.1",
     "react-toggle": "^4.0.2",
-    "react-universal-component": "^3.0.3",
-    "reactstrap": "^6.3.0",
-    "recharts": "^1.2.0",
+    "react-universal-component": "^4.0.0",
+    "reactstrap": "^8.0.0",
+    "recharts": "^1.5.0",
     "text-mask-addons": "^3.8.0",
     "uuid": "^3.3.2",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.3.0"
   }
 }
