--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1"
   },
   "dependencies": {
-    "@owczar/dashboard-style--main": "^0.2.15",
+    "@owczar/dashboard-style--main": "^0.2.18",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.3.1",
@@ -40,7 +40,7 @@
     "lodash": "^4.17.11",
     "mobile-detect": "^1.4.3",
     "moment": "^2.24.0",
-    "next": "^8.0.4",
+    "next": "^8.1.0",
     "next-fonts": "^0.17.0",
     "next-images": "^1.1.1",
     "node-fetch": "^2.3.0",
@@ -51,35 +51,35 @@
     "query-string": "^6.4.2",
     "rc-slider": "^8.6.9",
     "react": "^16.8.6",
-    "react-beautiful-dnd": "^11.0.0-beta.3",
+    "react-beautiful-dnd": "^11.0.1",
     "react-big-calendar": "^0.20.4",
-    "react-bootstrap-table-next": "^3.1.0",
+    "react-bootstrap-table-next": "^3.1.1",
     "react-bootstrap-table2-editor": "^1.2.3",
-    "react-bootstrap-table2-filter": "^1.1.8",
-    "react-bootstrap-table2-paginator": "^2.0.5",
-    "react-bootstrap-table2-toolkit": "^1.4.0",
+    "react-bootstrap-table2-filter": "^1.1.9",
+    "react-bootstrap-table2-paginator": "^2.0.6",
+    "react-bootstrap-table2-toolkit": "^1.4.1",
     "react-bootstrap-typeahead": "^4.0.0-alpha.9",
     "react-content-loader": "^4.2.1",
-    "react-datepicker": "^2.3.0",
+    "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.3",
+    "react-dropzone": "^10.1.4",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.8.3",
-    "react-image-crop": "^6.0.18",
+    "react-hot-loader": "^4.8.4",
+    "react-image-crop": "^7.0.1",
     "react-quill": "^1.3.3",
     "react-responsive": "^6.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-select": "^2.4.2",
+    "react-select": "^2.4.3",
     "react-text-mask": "^5.4.3",
-    "react-toastify": "^5.0.1",
+    "react-toastify": "^5.1.0",
     "react-toggle": "^4.0.2",
     "react-universal-component": "^4.0.0",
     "reactstrap": "^8.0.0",
     "recharts": "^1.5.0",
     "text-mask-addons": "^3.8.0",
     "uuid": "^3.3.2",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.1"
   }
 }
