--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-starter",
+  "name": "airframe-dashboard",
   "version": "0.1.0",
   "description": "Seed project for flexible light React/Bootstrap 4 dashboards.",
   "main": "index.js",
@@ -26,7 +26,7 @@
     "file-loader": "^3.0.1"
   },
   "dependencies": {
-    "@owczar/dashboard-style--main": "^0.2.27",
+    "@owczar/dashboard-style--airframe": "^0.1.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.3.1",
